crates/toml/tests/snapshots/invalid/array/no-close-table-01.stderr
TOML parse error at line 1, column 16
  |
1 | x = [{ key = 42
  |                ^
newlines are unsupported in inline tables, expected nothing

---
TOML parse error at line 1, column 17
  |
1 | x = [{ key = 42
  |                 ^
unclosed inline table, expected `}`

---
TOML parse error at line 1, column 16
  |
1 | x = [{ key = 42
  |                ^
unclosed array, expected `]`
